# flask-terraform-demo

./: .gitignore  Dockerfile  README.md  docker-compose-slim.yml  docker-compose.yml  pyproject.toml  titanic_app.sql
bus_app/: app.py
rds_init/: Dockerfile  app.csv  init.sh
terraform/: main.tf  provider.tf  variables.tf
titanic_app/: app.py  config.py  pyproject.toml  requirements.txt
