[tool.poetry]
name = "titanic-app"
version = "0.1.0"
description = ""
authors = ["Utku Toraman <utkutoraman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "22.12.0"
blinker = "1.6.2"
click = "8.1.3"
distlib = "0.3.6"
filelock = "3.12.2"
flask = "2.3.2"
flask-sqlalchemy = "3.0.5"
inflect = "6.0.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
marshmallow = "3.19.0"
mypy-extensions = "0.4.3"
packaging = "23.1"
pathspec = "0.10.3"
platformdirs = "3.7.0"
psycopg2-binary = "2.9.6"
pydantic = "1.10.9"
six = "1.16.0"
sqlalchemy = "2.0.16"
typing-extensions = "4.6.3"
virtualenv = "20.23.1"
werkzeug = "2.3.6"
gunicorn = "^20.1.0"
awscli = "^1.29.2"
boto3 = "^1.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
